# build_obstacles_footprint

./: camera_pose.yaml  mocap_obstacles.md  readme.md
assets/: extract_calib.py
assets/scene_isaac/: scene_aruco.usd
assets/virtualmocap/vision/: camera.py  image_noise.py  lens_distortion.py  linear_projection.py
src/build_obstacles_footprint/: CMakeLists.txt  package.xml
src/build_obstacles_footprint/build_obstacles_footprint/: build_polygons.py
src/build_obstacles_footprint/config/: obstacles.yaml
src/build_obstacles_footprint/launch/: build_obstacles_footprint.launch.py
src/estimate_markers_poses/: CMakeLists.txt  package.xml
src/estimate_markers_poses/config/: camera_pose.yaml  isaac_apriltag.yaml  lima_apriltag.yaml
src/estimate_markers_poses/estimate_markers_poses/: publish_camera_pose.py
src/estimate_markers_poses/launch/: detection_arena.py  estimate_poses.launch.py
src/estimate_markers_poses/rviz/: tf_visualization.rviz
src/ros_camera_driver/: Dockerfile  camera_info.yaml  entrypoint.sh  readme.md
